# aizk

./: .copier-answers.yml  .dockerignore  .env.example  .gitignore  .pyrefly-baseline.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ONBOARDING.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.crimson.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
.lote/: db.sqlite
archive/: README.md
archive/ts/: .gitignore  Dockerfile  README.md  chefe.toml  drizzle.config.ts  eslint.config.js  tsconfig.json
archive/ts/drizzle/: 0000_tranquil_selene.sql  0001_runtime_surface.sql  0002_queue.sql  0003_watermark_kinds.sql
archive/ts/scripts/: auth_check.ts  extract_check.ts  packer_check.ts  parity.ts  passes_check.ts  queue_check.ts  recall_dump.ts  share_check.ts  time_ts.ts  worker_check.ts
archive/ts/src/: worker.ts
deploy/: .env.example  Dockerfile  docker-compose.crimson.yml  docker-compose.yml  logto.conf  reranker.jinja
deploy/initdb/: roles.sh
docs/: .gitignore  api.md  architecture.md  astro.config.mjs  benchmarks.md  comparison.md  concepts.md  index.md  mcp-clients.md  onboarding.md  operations.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  provenance.md  quickstart.md  references.md  release.md  security.md
docs/engine/: autonomy.md  identity.md  index.md  lattice.md  read-path.md  store.md  write-path.md
docs/hooks/: llms.py
docs/scripts/: check-pages.mjs
docs/src/components/: CostEstimator.svelte  Diagram.astro  FlowMap.svelte  flows.ts
docs/src/layouts/: Marketing.astro
docs/src/pages/: index.astro
docs/src/styles/: brand.css  docs.css  marketing.css
docs/stylesheets/: brand.css
eval/: __init__.py  answerability.py  cleanup.py  cli.py  database.py  extraction.py  gate.py  groupmem.py  launcher.py  management.py  metrics.py  plans.py  routes.py  runner.py  scale.py  service.py
infra/: __init__.py
infra/aws/: .terraform.lock.hcl  README.md  __init__.py  app.py  config.py  main.tf  main.tofutest.hcl  outputs.tf  stack.py  terraform.tfvars.example  variables.tf  versions.tf
initdb/: roles.sh  roles.sql
services/gliner/: Dockerfile  app.py
skills/aizk/: SKILL.md
src/aizk/: admin.py  answerability.py  auth.py  backup.py  cli.py  exceptions.py  export.py  memory.py  ops.py  provenance.py  runtime.py  scopes.py  status.py  storage.py  types.py  usage.py
src/deploy/: .env.example  Caddyfile  Caddyfile.docs  Dockerfile  docker-compose.yml  logto.conf
src/eval/: answerability.py  cli.py  config.py  corpus.py  extraction.py  gate.py  launcher.py  management.py  models.py  plans.py  routes.py  runner.py  scale.py  service.py  stats.py
src/web/: .env.example  .prettierignore  README.md  openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
tests/: README.md  a_env.py  bg_doubles.py  conftest.py  dbutil.py  doubles.py  eval_util.py  factories.py  graphdb.py  id_factory.py  mcp_probe.py  seedgraph.py  strategies.py  test_admin.py  test_backup.py  test_cli.py  test_config.py  test_contracts.py  test_doctor.py  test_export.py  test_integration.py  test_lifecycle.py  test_ops.py  test_orm_affordances.py  test_smoke.py  test_storage.py  test_usage.py
tests/api/: test_app.py  test_artifacts.py  test_dashboard.py  test_explorer.py  test_middleware.py  test_operations.py  test_organizations.py  test_status.py  test_uploads.py
tests/artifacts/: test_service.py  test_upload_hash.py  test_visual.py
tests/auth/: test_auth.py
tests/background/: conftest.py  test_conversion.py  test_maintenance.py  test_models.py  test_payloads.py  test_portable.py  test_queue.py  test_schedule.py  test_status.py  test_tasks.py  test_wake.py
tests/benchmark/: conftest.py  test_benchmark_collector.py  test_retrieval_ablation.py
tests/cli/: test_admin_commands.py  test_aws.py  test_cli.py
tests/client/: test_client.py
tests/deploy/: test_aws_stack.py
tests/eval/: test_ablation_plans.py  test_answerability.py  test_benchmarks.py  test_cleanup.py  test_corpus.py  test_eval.py  test_extraction.py  test_gate.py  test_groupmem.py  test_harness.py  test_interface.py  test_management.py  test_models.py  test_plans.py  test_scale.py  test_stats.py  test_sweep.py
tests/extract/: test_dating.py  test_extractor.py  test_grounding.py  test_ingest.py  test_ingest_extra.py  test_journal.py  test_llm.py  test_ontology.py  test_providers.py  test_strategies.py
tests/graph/: conftest.py  test_algos.py  test_build.py  test_communities.py  test_consolidate.py  test_consolidation_rules.py  test_curation_review.py  test_decay.py  test_graph_algos.py  test_ids.py  test_insight.py  test_profiles.py  test_promote.py  test_raptor.py  test_reembed.py  test_session_tier.py  test_temporal.py  test_tier_builder.py  test_timeline.py
tests/integration/: test_artifact_stack.py
tests/integrations/: test_logto_client.py  test_logto_organizations.py
tests/mcp/: conftest.py  test_auth.py  test_logto_policy.py  test_mcp.py  test_middleware.py  test_principal.py  test_remember_upload.py  test_resources.py  test_server.py  test_user.py  test_webui.py
tests/retrieval/: test_context.py  test_contextual_bm25.py  test_fusion.py  test_hybrid.py  test_models.py  test_pack.py  test_plan_validation.py  test_query_route.py  test_recall.py  test_recall_units.py  test_retrieval.py
tests/serving/: test_chunk.py  test_embed.py  test_entity_gate.py  test_gliner_long_text.py  test_rerank.py  test_reranker.py  test_serving.py
tests/store/: test_artifact.py  test_catalog.py  test_curation.py  test_embed_dim.py  test_group_delete.py  test_hybrid_recall.py  test_index_backend.py  test_migrations.py  test_models.py  test_principal_auth.py  test_rls.py  test_rls_ops.py  test_shared_brain.py  test_store.py  test_store_misc.py  test_temporal.py  test_user.py  test_watermark.py
typings/scipy/: __init__.pyi  stats.pyi
typings/statsmodels/: __init__.pyi
(+579 files in other folders)
