[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aizk"
version = "0.0.1"
description = "A self-hosted multi-tenant memory engine that turns a Zettelkasten into scoped agent-queryable memory over MCP"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [{ name = "Pedro Valois", email = "contact@phvv.me" }]
keywords = ["aizk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "sqlalchemy[asyncio]>=2.1.0b3,<3",
  "sqlmodel>=0.0.39,<0.1",
  "asyncpg>=0.31,<0.32",
  "alembic>=1.18.5,<2",
  "pgvector>=0.5,<0.6",
  "pydantic-settings>=2.14.2,<3",
  "httpx>=0.28.1,<0.29",
  "async-lru>=2.3,<3",
  "cyclopts>=4.21,<5",
  "loguru>=0.7.3,<0.8",
  "fastmcp>=3.4.4,<4",
  "networkx>=3.6.1,<4",
  "openai>=2.45,<3",
  "pydantic-ai-slim[openai]>=2.8,<3",
  "chonkie>=1.7,<2",
  "identify>=2.6.19,<3",
  "python-slugify>=8.0.4,<9",
  "inflection>=0.5.1,<0.6",
  "patos[sql]>=0.0.9,<0.1",
  "rlsalchemy>=0.4.1,<0.6",
  "mainboard>=0.0.8,<0.1",
  "pgqueuer>=1.1.1,<2",
  "dateparser>=1.4.1,<2",
  "jinja2>=3.1.6,<4",
  "tenacity>=9.1.4,<10",
]

[project.scripts]
aizk = "aizk.cli:app"

[project.optional-dependencies]
dev = [
  "fire>=0.7.1,<0.8",
  "pydantic-evals>=2.8,<3",
  "ranx>=0.3.21,<0.4",
  "numpy>=2.4.6,<2.5",
  "ruff>=0.6",
  "pyrefly>=1",
  "ty>=0.0.59,<0.1",
  "mypy>=1.11",
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6.100",
  "polyfactory>=2.22,<3",
]
docs = ["mkdocs-material>=9.5", "mkdocs-static-i18n>=1.2"]

[tool.uv]
override-dependencies = ["sqlalchemy[asyncio]>=2.1.0b3,<3"]

[project.urls]
Homepage = "https://phvv.me/aizk"
Documentation = "https://phvv.me/aizk"
Repository = "https://github.com/phvv-me/aizk"
Issues = "https://github.com/phvv-me/aizk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aizk"]

[tool.ruff]
line-length = 99
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["aizk", "eval", "alembic"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "../../.chefe/.pixi/envs"
venv = "default"
reportMissingModuleSource = false

[tool.pyrefly]
project-includes = ["src", "eval", "tests"]
search-path = ["src", "tests", "."]
python-interpreter-path = "../../.chefe/.pixi/envs/default/bin/python"
replace-imports-with-any = ["sqlmodel.ext.*"]

[tool.ty.environment]
python = "../../.chefe/.pixi/envs/default"
root = ["src", "eval"]

# ty covers src as the second checker beside pyrefly, which also covers tests.
# Each override below downgrades one known third-party typing gap to a warning on the
# exact files that hit it, so anything new anywhere stays an error and fails the gate.
[tool.ty.src]
include = ["src", "eval"]

# sqlmodel's SQLModelConfig does not declare ignored_types (sqlalchemy hybrid_property)
# and its metaclass bridge loses the declared_attr shape of __tablename__.
[[tool.ty.overrides]]
include = ["src/aizk/store/mixins/base.py"]
[tool.ty.overrides.rules]
invalid-assignment = "warn"
invalid-attribute-override = "warn"

[tool.pytest.ini_options]
addopts = "-q -ra --strict-markers --import-mode=importlib --cov=aizk --cov=eval --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["tests", "."]

[tool.coverage.run]
source = ["aizk", "eval"]
branch = true
omit = ["*/store/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\.\\.\\.",
]
