[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aizk"
version = "0.0.1"
description = "A self-hosted multi-tenant memory engine that turns a Zettelkasten into scoped agent-queryable memory over MCP"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [{ name = "Pedro Valois", email = "contact@phvv.me" }]
keywords = ["aizk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "sqlalchemy[asyncio]>=2.1.0b3,<3",
    "greenlet>=3,<4",
    "sqlmodel>=0.0.39,<0.1",
    "asyncpg>=0.31,<0.32",
    "alembic>=1.18.5,<2",
    "pgvector>=0.5,<0.6",
    "pydantic-settings>=2.14.2,<3",
    "httpx>=0.28.1,<0.29",
    "async-lru>=2.3,<3",
    "clamav-client>=0.7.2,<0.8",
    "cyclopts>=4.21,<5",
    "loguru>=0.7.3,<0.8",
    "fastmcp>=3.4.4,<4",
    "py-key-value-aio[keyring]>=0.4.5,<0.5",
    "fastapi>=0.128,<1",
    "networkx>=3.6.1,<4",
    "openai>=2.45,<3",
    "obstore>=0.11,<0.12",
    "pydantic-ai-slim[openai]>=2.8,<3",
    "chonkie>=1.7,<2",
    "identify>=2.6.19,<3",
    "python-slugify>=8.0.4,<9",
    "inflection>=0.5.1,<0.6",
    "patos[sql]>=0.0.9,<0.1",
    "rlsalchemy>=0.4.1,<0.6",
    "mainboard>=0.0.8,<0.1",
    "pgqueuer>=1.1.1,<2",
    "opentelemetry-sdk>=1.44,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.43,<2",
    "opentelemetry-instrumentation-starlette>=0.65b0,<1",
    "opentelemetry-instrumentation-sqlalchemy>=0.65b0,<1",
    "opentelemetry-instrumentation-httpx>=0.65b0,<1",
    "dateparser>=1.4.1,<2",
    "jinja2>=3.1.6,<4",
    "tenacity>=9.1.4,<10",
]

[project.scripts]
aizk = "aizk.cli:main"
aizk-eval = "eval.launcher:main"

# Dev-only Python deps (PEP 735). chefe reads this group into the pixi dev env, and the built
# wheel never carries it. The checkers ride their latest releases now that the sqlmodel `Select`
# imprecision is fixed at the source: statements handed to `AsyncSession.exec` carry sqlmodel's
# `Select` (not SQLAlchemy's), so the ty 0.0.59 pin that once hid the 11 exec-overload mismatches
# is gone. pyrefly, ty, and mypy are the three wired gates. pyright is deliberately not among them:
# its only distinct complaint here is a false positive against patos's `sql.Field`/`sql.PK` stub,
# which types the column helpers as `type[T]` and so rejects the Pydantic annotated aliases and
# unions aizk passes. The other three model those calls correctly, so gating on pyright would buy
# nothing but a pile of inline suppressions. Fixing the patos stub upstream would let it rejoin.
[dependency-groups]
dev = [
    # eval + benchmark stack (src/eval and the benchmark tests import these)
    "fire>=0.7.1,<0.8",
    "pydantic-evals>=2.8,<3",
    "ir-measures>=0.4.3,<0.5",
    "pytrec-eval-terrier>=0.5.10,<0.6",
    "autorank>=1.3.0,<2",
    "statsmodels>=0.14.6,<0.15",
    "pytest-regressions>=2.11.0,<3",
    "modal>=1.5.2,<2",
    # numeric and image libs the eval + serving tests import (scipy rides in via statsmodels)
    "numpy>=2.4.6,<3",
    "pandas>=3.0.3,<4",
    "pillow>=12,<13",
    # third-party type stubs: the crux of the old uv divergence (pyrefly could not type these)
    "asyncpg-stubs>=0.31.2,<0.32",
    "types-dateparser>=1.4.1.20260617,<2",
    "types-networkx>=3.6.1.20260624,<4",
    # checkers and linters, pinned to the versions the monorepo gate runs green on
    "ruff>=0.6",
    "pyrefly>=1.1.1,<2",
    "ty>=0.0.61,<0.1",
    "mypy>=2.3.0,<3",
    "import-linter>=2.3,<3",
    # test runner and plugins
    "pytest>=9.1.0,<10",
    "pytest-cov>=7.1.0,<8",
    "pytest-randomly>=4.1.0,<5",
    "pytest-xdist>=3.8.0,<4",
    "pytest-mock>=3.15.1,<4",
    "pytest-subprocess>=1.6.0,<2",
    "pytest-benchmark>=5.2.3,<6",
    "pytest-clarity>=1.0.1,<2",
    "pytest-rerunfailures>=16.3,<17",
    "pytest-timeout>=2.4.0,<3",
    "hypothesis>=6.155.3,<7",
    "polyfactory>=2.22.4,<3",
    "faker>=40.23.0,<41",
    "syrupy>=5.3.2,<6",
    "dirty-equals>=0.11,<0.12",
]

[project.urls]
Homepage = "https://aizk.phvv.me"
Documentation = "https://aizk.phvv.me/docs"
Repository = "https://github.com/phvv-me/aizk"
Issues = "https://github.com/phvv-me/aizk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aizk", "src/eval"]

[tool.ruff]
line-length = 99
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID251"]

[tool.ruff.lint.isort]
known-first-party = ["aizk", "eval", "alembic"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"sqlalchemy.select".msg = "Use sqlmodel.select for every query."

# The layered architecture below is enforced by import-linter (`lint-imports`, wired into
# the CI lint job and `chefe run lint-imports-aizk`). docs/architecture.md defines the rules.
[tool.importlinter]
root_packages = ["aizk"]
include_external_packages = true
exclude_type_checking_imports = true

# Exhaustive over every top-level aizk package: a new package breaks the gate until it is
# assigned a layer here. `|` siblings are independent, `:` siblings may import each other.
# `config` importing nothing internal follows from its independent bottom-layer placement.
[[tool.importlinter.contracts]]
name = "Every aizk package sits in one enforced layer"
type = "layers"
containers = ["aizk"]
exhaustive = true
layers = [
    "cli : commands",
    "admin | client | runtime",
    "mcp | api | ops",
    "memory",
    "status",
    "artifacts : background : graph : retrieval : extract : serving : ontology : usage",
    "auth | backup | export",
    "integrations | storage",
    "store",
    "config | types | exceptions | provenance | common",
]

# Rule 1: SQL is composed in the store's model classmethods and in the packages whose
# lane and maintenance statements live beside the code they serve; every other package
# reads through model methods and `User.exec`. The packages missing from the source list
# are the documented exceptions: store owns the schema and statements; admin, artifacts,
# background, backup, export, extract, graph, ontology, ops, and retrieval compose their
# own statements; config types its statement hooks with `sqlalchemy.Select`.
# `tests/test_contracts.py` asserts this split stays exhaustive as packages appear.
[[tool.importlinter.contracts]]
name = "Non-SQL packages reach the store only through model methods and User.exec"
type = "forbidden"
source_modules = [
    "aizk.api",
    "aizk.auth",
    "aizk.client",
    "aizk.cli",
    "aizk.common",
    "aizk.commands",
    "aizk.exceptions",
    "aizk.integrations",
    "aizk.mcp",
    "aizk.memory",
    "aizk.provenance",
    "aizk.runtime",
    "aizk.serving",
    "aizk.storage",
    "aizk.status",
    "aizk.types",
    "aizk.usage",
]
forbidden_modules = ["sqlmodel", "sqlalchemy"]
allow_indirect_imports = true

[tool.pyrefly]
project-includes = ["src/aizk", "src/eval", "tests"]
search-path = ["src", "tests"]
python-interpreter-path = "../../.chefe/.pixi/envs/default/bin/python"
replace-imports-with-any = ["sqlmodel.ext.*"]

[tool.ty.environment]
python = "../../.chefe/.pixi/envs/default"
root = ["src"]

# ty covers src as the second checker beside pyrefly, which also covers tests.
# Each override below downgrades one known third-party typing gap to a warning on the
# exact files that hit it, so anything new anywhere stays an error and fails the gate.
[tool.ty.src]
include = ["src/aizk", "src/eval"]

# sqlmodel's SQLModelConfig does not declare Pydantic's ignored_types field used for
# SQLAlchemy hybrid properties.
[[tool.ty.overrides]]
include = ["src/aizk/store/mixins/base.py"]
[tool.ty.overrides.rules]
invalid-assignment = "warn"

# mypy runs the SQLModel-calibrated strict profile as the third checker beside pyrefly and ty.
# `strict` is the base; the two relaxations are the irreducible SQLModel typing gaps, not our
# bugs, and the config leaves every other strict check on so a genuine mistake still fails:
#   - implicit_reexport: aizk packages re-export through their `__init__` on purpose, and pyrefly
#     and ty already enforce their own re-export view; mypy's strict no-implicit-reexport only
#     re-flags 38 deliberate re-exports it cannot see the intent behind.
#   - call-arg: a SQLModel `table=True` model synthesises its pydantic `__init__` through the
#     metaclass at runtime, so mypy, which has no working sqlmodel plugin (the pydantic plugin
#     miscounts table models into 386 errors), sees only `DeclarativeBase.__init__` and rejects
#     every keyword construction across the codebase. The check is irreducible, not a real defect.
[tool.mypy]
python_version = "3.14"
strict = true
implicit_reexport = true
disable_error_code = ["call-arg"]
mypy_path = ["src", "typings"]
exclude = ['src/aizk/store/migrations/versions/']

# fire ships no py.typed marker and is imported only by the eval CLI entrypoint.
[[tool.mypy.overrides]]
module = ["fire", "fire.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q -ra --strict-markers --import-mode=importlib -m 'not integration and not benchmark' --cov=aizk --cov=eval --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["tests", "src"]
markers = [
    "benchmark: statistical retrieval benchmarks requiring the frozen live corpus and model stack",
    "integration: tests that require real external service boundaries",
    "artifact_stack: the complete PostgreSQL, PgQueuer, object, scan, conversion, model, recall, and resource path",
    "real_services: exercises real serving-client construction over an in-test transport double, opting out of the default model-lane stubbing",
]

[tool.coverage.run]
source = ["aizk", "eval"]
branch = true
omit = ["*/store/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

# chefe reads this table as the dev-env manifest (compiled to pixi). Runtime deps come from
# [project.dependencies], dev tools from [dependency-groups].dev; this table adds only the conda
# interpreter, the git routing for the house packages (PyPI lags their source at the same version
# number), the sqlalchemy pre-release solver hint, and the CI tasks. The pyrefly/ty interpreter is
# pointed at the compiled pixi env at task time, so it works standalone in CI and never depends on
# the monorepo path baked into [tool.pyrefly]/[tool.ty] (which still serves the monorepo gates).
[tool.chefe.workspace]
platforms = ["linux-64"]

[tool.chefe.conda]
python = ">=3.14.6,<3.15"

[tool.chefe.python.dependency-overrides]
sqlalchemy = ">=2.1.0b3"

[tool.chefe.sources]
patos = { provider = "git", git = "https://github.com/phvv-me/patos", branch = "main" }
rlsalchemy = { provider = "git", git = "https://github.com/phvv-me/rls", branch = "main" }
mainboard = { provider = "git", git = "https://github.com/phvv-me/mainboard", branch = "main" }

[tool.chefe.tasks]
lint = { run = "ruff check . && ruff format --check ." }
lint-imports = "lint-imports"
typecheck = { run = "pyrefly check --python-interpreter-path \"$CONDA_PREFIX/bin/python\" && ty check --python \"$CONDA_PREFIX\" --exit-zero-on-warning && mypy src/aizk src/eval" }
test = { run = "python -m pytest -n 4 --dist loadscope --benchmark-disable --cov-fail-under=0 && COVERAGE_CORE=pytrace python -m pytest 'tests/graph/test_build.py::test_write_graph_slice_retries_a_transient_db_conflict' -o addopts='--import-mode=importlib' --cov=aizk --cov-append --cov-report=term-missing" }
